tests/toy/pos/000068_cdrc2.toylang
program a = { if a + a then sleep; } .
