tests/toy/neg/000252_mutation.toylang
program a = { bool a then sleep; } .
